# photo-cleaner

./: .env  .env.example  .gitignore  AUDIT_FIX_TRACKER_2026-05-03.md  AUDIT_FIX_TRACKER_UI_2026-05-03.md  EMERGENCY_FIXES_TRACKER_2026-05-03.md  IMPLEMENTATION_DASHBOARD.md  IMPLEMENTATION_LOG_BUTTONS.md  LICENSE  Makefile  PHASE_4_2_COMPLETION_SUMMARY.txt  PHASE_4_2_PLAN.md  PhotoCleaner.spec  ROADMAP_2026.md  UI_AUDIT_COMPLETE_2026-05-03.md  UI_AUDIT_EXECUTIVE_SUMMARY_2026-05-03.md  UI_AUDIT_SYSTEMATIC_2026-05-03.md  build.bat  build.sh  build_output.txt  create_release.py  edge_case_test_results.json  feedback_form.html  phase4_2_baseline_report.txt  phase4_2_complete_baseline.txt  phase4_2_summary.txt  phase4_2_test_baseline.txt  photo_cleaner.db-shm  photo_cleaner.db-wal  pyproject.toml  pytest.ini  pytest_baseline.txt  requirements.txt  run_ui.py  stress_test_results.json
.github/: PULL_REQUEST_TEMPLATE.md
Docker/: .dockerignore  Dockerfile  docker-compose.yml  smoke_test.py
build_hooks/: hook-numpy.py  hook-pycparser.py  hook_multiprocessing_fix.py  hook_numpy_fix.py  runtime_numpy_init.py.disabled  runtime_setuptools_distutils.py
docs/: AUDIT_FIX_TRACKER_2026-05-03.md  CHANGELOG.md  EXECUTION_BACKLOG_20260304.md  EXIF_SMART_GROUPING.md  EXIF_SMART_GROUPING_IMPLEMENTATION_GUIDE.md  EXIF_SMART_GROUPING_PROMPT.md  FEATURES.md  GTM_STRATEGY.md  INDEX.md  PROJECT_AUDIT_20260304.md  README.md  SECURITY.md  WATCHFOLDERS_AUTOIMPORT.md  WATCHFOLDERS_IMPLEMENTATION_GUIDE.md
feedback/: README.md  TEST_SESSION_TEMPLATE.md  feedback_form.html  feedback_service_jandi_de_1771787754215.json
installer/: PhotoCleaner.wxs
profiling_results/: face_detection_improvements_test.json  face_detection_mtcnn_test.json  license_system_20260202_171741.json  phase2_baseline_20260203_190803.json  phase2_baseline_20260203_190933.json  phase2_baseline_20260203_191050.json  phase2_baseline_20260203_193739.json  phase2_baseline_20260203_194324.json  phase2_baseline_20260206_164626.json  phase2_baseline_20260206_170328.json  phase2_baseline_20260206_170857.json  phase2_baseline_20260206_171636.json  phase2_baseline_20260206_172124.json  phase2_baseline_20260206_173011.json  phase2_baseline_20260206_173410.json  phase2_baseline_20260408_162010.json  phase2_baseline_20260408_162202.json  phase2_baseline_20260408_162304.json  phase2_baseline_20260408_164250.json  phase2_baseline_20260408_164343.json  scoring_test_mtcnn.json  (+40 more)
(+487 files in other folders)
